--- a/MusicPlayer/Spotify/Spotify.csproj
+++ b/MusicPlayer/Spotify/Spotify.csproj
@@ -14,6 +14,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
+    <Folder Include="wwwroot\Fonts\" />
   </ItemGroup>
 
 </Project>
