--- a/MusicPlayer/Spotify/appsettings.json
+++ b/MusicPlayer/Spotify/appsettings.json
@@ -7,6 +7,8 @@
     }
   },
   "ConnectionStrings": {
+    "RemoteLocalConnection": "Server=localhost;Initial catalog=_bluemusic;User ID=yourmoon;Password=Anigiliati0n",
+    "RemoteConnection": "Server=scp.realhost.pro;Initial catalog=_bluemusic;User ID=yourmoon;Password=Anigiliati0n;",
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=SpotifyDB;Trusted_Connection=True;"
   }
 }
